fixed alignment of images on project show, replaced image controls with icons

--- a/public/stylesheets/teamportfolios.css
+++ b/public/stylesheets/teamportfolios.css
@@ -1,4 +1,8 @@
-/* @override http://localhost:3000/stylesheets/teamportfolios.css?1248809502 */
+/* @override 
+	http://localhost:3000/stylesheets/teamportfolios.css?1248809502
+	http://localhost:3000/stylesheets/teamportfolios.css?1248810523
+	http://localhost:3000/stylesheets/teamportfolios.css?1248812454
+*/
 
 /* v1.0 | 20080212 */
 /* from http://meyerweb.com/eric/tools/css/reset/ */
@@ -447,13 +451,12 @@ form span.note {
 .caption {
   	margin: 0;
   	padding: 0.5em 0;
-  	color: #999;
   	font-size: 0.8em;
 }
 
 
 .project-image {
-  	margin: 0.3em 0 1.5em 0;
+  	margin: 0 0 1.5em 0;
 }
 
 .delete-image {
